🐛 fix flickering buttons during modal transitions (#710)
no issue

- removes transition on `all` properties in favour of an explicit list, fixes the buttons flickering after the modal appears and the outline/text being visible when the modal disappears
- simplifies the liquid-fire transition so that elements being removed at slightly different times doesn't cause flickering when the modal is removed

--- a/ghost/admin/app/styles/patterns/buttons.css
+++ b/ghost/admin/app/styles/patterns/buttons.css
@@ -14,6 +14,7 @@
     fill: color(var(--lightgrey) l(-27%) blackness(+15%));
     border-radius: 5px;
     transition: all 0.2s ease;
+    transition-property: color, border-color, background, width, height;
 
     -webkit-font-smoothing: subpixel-antialiased;
 }
